Created data cleaning functions, comments, and cleaned data

--- a/code.ipynb
+++ b/code.ipynb
@@ -3,10 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "execution_count": 84,
    "id": "70810c7c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing useful packages\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -15,10 +17,316 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "1e2c0d29",
+   "execution_count": 142,
+   "id": "6ca84c36",
    "metadata": {},
    "outputs": [],
    "source": [
     "schoolexp_df = pd.read_csv(r'C:\\Users\\12265\\Downloads\\2016 School Explorer.csv')"
+    "\n",
+    "# Data cleaning function that drops any relevant rows (i.e x variables) that have missing values present\n",
+    "def drop_missing_rows(df, x_variables):\n",
+    "    missing_index = []\n",
+    "    for row in df.isnull().iterrows():\n",
+    "        index_value, column_values = row\n",
+    "        for x in x_variables:\n",
+    "            if index_value not in missing_index:\n",
+    "                if column_values[x] == True:\n",
+    "                    missing_index.append(index_value)\n",
+    "    new_df = df\n",
+    "    new_df = new_df.drop(missing_index)\n",
+    "    return new_df\n",
+    "\n",
+    "# Data cleaning function that eliminates any rows that are not relevant to our research\n",
+    "def drop_irrelevant_columns(df, x_variables, y_variable):\n",
+    "    irrelevant = []\n",
+    "    for columns, rows in df.items():\n",
+    "        if columns not in x_variables and columns != y_variable:\n",
+    "            irrelevant.append(columns)\n",
+    "    new_df = df\n",
+    "    new_df = new_df.drop(columns=irrelevant)\n",
+    "    \n",
+    "    return new_df\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "05f7b07a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Community School?</th>\n",
+       "      <th>School Income Estimate</th>\n",
+       "      <th>Percent of Students Chronically Absent</th>\n",
+       "      <th>Strong Family-Community Ties %</th>\n",
+       "      <th>Student Achievement Rating</th>\n",
+       "      <th>Average Math Proficiency</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>P.S. 015 ROBERTO CLEMENTE</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>$31,141.72</td>\n",
+       "      <td>18%</td>\n",
+       "      <td>85%</td>\n",
+       "      <td>Approaching Target</td>\n",
+       "      <td>2.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P.S. 019 ASHER LEVY</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$56,462.88</td>\n",
+       "      <td>30%</td>\n",
+       "      <td>86%</td>\n",
+       "      <td>Exceeding Target</td>\n",
+       "      <td>2.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P.S. 020 ANNA SILVER</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$44,342.61</td>\n",
+       "      <td>20%</td>\n",
+       "      <td>80%</td>\n",
+       "      <td>Approaching Target</td>\n",
+       "      <td>2.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P.S. 034 FRANKLIN D. ROOSEVELT</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$31,454.00</td>\n",
+       "      <td>28%</td>\n",
+       "      <td>89%</td>\n",
+       "      <td>Exceeding Target</td>\n",
+       "      <td>2.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>THE STAR ACADEMY - P.S.63</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$46,435.59</td>\n",
+       "      <td>23%</td>\n",
+       "      <td>89%</td>\n",
+       "      <td>Meeting Target</td>\n",
+       "      <td>2.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FAMILY LIFE ACADEMY CHARTER SCHOOL</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$27,243.69</td>\n",
+       "      <td>13%</td>\n",
+       "      <td>83%</td>\n",
+       "      <td>Meeting Target</td>\n",
+       "      <td>2.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HARRIET TUBMAN CHARTER SCHOOL</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$24,172.46</td>\n",
+       "      <td>24%</td>\n",
+       "      <td>88%</td>\n",
+       "      <td>Meeting Target</td>\n",
+       "      <td>2.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ICAHN CHARTER SCHOOL</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$26,422.05</td>\n",
+       "      <td>12%</td>\n",
+       "      <td>86%</td>\n",
+       "      <td>Meeting Target</td>\n",
+       "      <td>3.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BRONX CHARTER SCHOOL FOR BETTER LEARNING</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$47,192.42</td>\n",
+       "      <td>12%</td>\n",
+       "      <td>91%</td>\n",
+       "      <td>Meeting Target</td>\n",
+       "      <td>3.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BRONX CHARTER SCHOOL FOR THE ARTS</th>\n",
+       "      <td>No</td>\n",
+       "      <td>$29,096.71</td>\n",
+       "      <td>22%</td>\n",
+       "      <td>85%</td>\n",
+       "      <td>Exceeding Target</td>\n",
+       "      <td>3.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>806 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Community School?  \\\n",
+       "School Name                                                  \n",
+       "P.S. 015 ROBERTO CLEMENTE                              Yes   \n",
+       "P.S. 019 ASHER LEVY                                     No   \n",
+       "P.S. 020 ANNA SILVER                                    No   \n",
+       "P.S. 034 FRANKLIN D. ROOSEVELT                          No   \n",
+       "THE STAR ACADEMY - P.S.63                               No   \n",
+       "...                                                    ...   \n",
+       "FAMILY LIFE ACADEMY CHARTER SCHOOL                      No   \n",
+       "HARRIET TUBMAN CHARTER SCHOOL                           No   \n",
+       "ICAHN CHARTER SCHOOL                                    No   \n",
+       "BRONX CHARTER SCHOOL FOR BETTER LEARNING                No   \n",
+       "BRONX CHARTER SCHOOL FOR THE ARTS                       No   \n",
+       "\n",
+       "                                         School Income Estimate  \\\n",
+       "School Name                                                       \n",
+       "P.S. 015 ROBERTO CLEMENTE                            $31,141.72   \n",
+       "P.S. 019 ASHER LEVY                                  $56,462.88   \n",
+       "P.S. 020 ANNA SILVER                                 $44,342.61   \n",
+       "P.S. 034 FRANKLIN D. ROOSEVELT                       $31,454.00   \n",
+       "THE STAR ACADEMY - P.S.63                            $46,435.59   \n",
+       "...                                                         ...   \n",
+       "FAMILY LIFE ACADEMY CHARTER SCHOOL                   $27,243.69   \n",
+       "HARRIET TUBMAN CHARTER SCHOOL                        $24,172.46   \n",
+       "ICAHN CHARTER SCHOOL                                 $26,422.05   \n",
+       "BRONX CHARTER SCHOOL FOR BETTER LEARNING             $47,192.42   \n",
+       "BRONX CHARTER SCHOOL FOR THE ARTS                    $29,096.71   \n",
+       "\n",
+       "                                         Percent of Students Chronically Absent  \\\n",
+       "School Name                                                                       \n",
+       "P.S. 015 ROBERTO CLEMENTE                                                   18%   \n",
+       "P.S. 019 ASHER LEVY                                                         30%   \n",
+       "P.S. 020 ANNA SILVER                                                        20%   \n",
+       "P.S. 034 FRANKLIN D. ROOSEVELT                                              28%   \n",
+       "THE STAR ACADEMY - P.S.63                                                   23%   \n",
+       "...                                                                         ...   \n",
+       "FAMILY LIFE ACADEMY CHARTER SCHOOL                                          13%   \n",
+       "HARRIET TUBMAN CHARTER SCHOOL                                               24%   \n",
+       "ICAHN CHARTER SCHOOL                                                        12%   \n",
+       "BRONX CHARTER SCHOOL FOR BETTER LEARNING                                    12%   \n",
+       "BRONX CHARTER SCHOOL FOR THE ARTS                                           22%   \n",
+       "\n",
+       "                                         Strong Family-Community Ties %  \\\n",
+       "School Name                                                               \n",
+       "P.S. 015 ROBERTO CLEMENTE                                           85%   \n",
+       "P.S. 019 ASHER LEVY                                                 86%   \n",
+       "P.S. 020 ANNA SILVER                                                80%   \n",
+       "P.S. 034 FRANKLIN D. ROOSEVELT                                      89%   \n",
+       "THE STAR ACADEMY - P.S.63                                           89%   \n",
+       "...                                                                 ...   \n",
+       "FAMILY LIFE ACADEMY CHARTER SCHOOL                                  83%   \n",
+       "HARRIET TUBMAN CHARTER SCHOOL                                       88%   \n",
+       "ICAHN CHARTER SCHOOL                                                86%   \n",
+       "BRONX CHARTER SCHOOL FOR BETTER LEARNING                            91%   \n",
+       "BRONX CHARTER SCHOOL FOR THE ARTS                                   85%   \n",
+       "\n",
+       "                                         Student Achievement Rating  \\\n",
+       "School Name                                                           \n",
+       "P.S. 015 ROBERTO CLEMENTE                        Approaching Target   \n",
+       "P.S. 019 ASHER LEVY                                Exceeding Target   \n",
+       "P.S. 020 ANNA SILVER                             Approaching Target   \n",
+       "P.S. 034 FRANKLIN D. ROOSEVELT                     Exceeding Target   \n",
+       "THE STAR ACADEMY - P.S.63                            Meeting Target   \n",
+       "...                                                             ...   \n",
+       "FAMILY LIFE ACADEMY CHARTER SCHOOL                   Meeting Target   \n",
+       "HARRIET TUBMAN CHARTER SCHOOL                        Meeting Target   \n",
+       "ICAHN CHARTER SCHOOL                                 Meeting Target   \n",
+       "BRONX CHARTER SCHOOL FOR BETTER LEARNING             Meeting Target   \n",
+       "BRONX CHARTER SCHOOL FOR THE ARTS                  Exceeding Target   \n",
+       "\n",
+       "                                          Average Math Proficiency  \n",
+       "School Name                                                         \n",
+       "P.S. 015 ROBERTO CLEMENTE                                     2.17  \n",
+       "P.S. 019 ASHER LEVY                                           2.98  \n",
+       "P.S. 020 ANNA SILVER                                          2.54  \n",
+       "P.S. 034 FRANKLIN D. ROOSEVELT                                2.47  \n",
+       "THE STAR ACADEMY - P.S.63                                     2.54  \n",
+       "...                                                            ...  \n",
+       "FAMILY LIFE ACADEMY CHARTER SCHOOL                            2.60  \n",
+       "HARRIET TUBMAN CHARTER SCHOOL                                 2.85  \n",
+       "ICAHN CHARTER SCHOOL                                          3.09  \n",
+       "BRONX CHARTER SCHOOL FOR BETTER LEARNING                      3.29  \n",
+       "BRONX CHARTER SCHOOL FOR THE ARTS                             3.19  \n",
+       "\n",
+       "[806 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Our x variables that we will be using to analyze our data\n",
+    "x_variables = [\n",
+    "    \"Average Math Proficiency\", \n",
+    "    \"Student Achievement Rating\", \n",
+    "    \"Percent of Students Chronically Absent\",\n",
+    "    \"School Income Estimate\",\n",
+    "    \"Strong Family-Community Ties %\"\n",
+    "]\n",
+    "\n",
+    "# Our y variable\n",
+    "y_variable = \"Community School?\"\n",
+    "\n",
+    "# Importing our dataset, the 2016 School Explorer from PASSNYC\n",
+    "# We are setting the index to \"School Name\"\n",
+    "schoolexp = pd.read_csv(r'C:\\Users\\12265\\Downloads\\2016 School Explorer.csv').set_index(\"School Name\")\n",
+    "\n",
+    "# Creating a new data frame and running our unclean dataframe through the cleaning functions\n",
+    "# to get a new cleaned data frame\n",
+    "schoolexp_cleaned = drop_missing_rows(schoolexp, x_variables)\n",
+    "schoolexp_cleaned = drop_irrelevant_columns(new_schoolexp, x_variables, y_variable)\n",
+    "\n",
+    "# Our clean dataframe\n",
+    "schoolexp_cleaned\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   }
  ],
